# test-gcp-api

./: README.md  pyproject.toml
src/test_gcp_api/: conf.json  main.py
src/test_gcp_api/GenericFile/: GenericFile.py  csvFile.py
src/test_gcp_api/configuration/: conf.json
src/test_gcp_api/genericFile/: genericFile.py  jsonFile.py
src/test_gcp_api/storage_classes/: BigQueryStorage.py  CloudStorage.py
src/test_gcp_api/utils/: util.py
