[tool.poetry]
name = "test-gcp-api"
version = "0.1.0"
description = ""
authors = ["skypomam <michelepoma81@gmail.com>"]
readme = "README.md"
packages = [{include = "test_gcp_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
