[tool.poetry]
name = "test-gcp-api"
version = "0.1.0"
description = ""
authors = ["michele-poma <michele-poma@gmail.com>"]
readme = "README.md"
packages = [{include = "test_gcp_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-storage = "^2.10"
google-cloud-bigquery = "^3.11"
logging = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
